# currentMind

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py
app/application/: dashboard.py  extraction.py  learning_notes.py  processing.py  repositories.py  sources.py
app/domain/: article.py  base.py  enums.py  extraction.py  learning_note.py  validation.py
app/infrastructure/: anthropic_generator.py  config.py  database.py  logging.py  mappers.py  openai_generator.py  orm_models.py  prompt_loader.py  rss_source.py  sqlite_repositories.py  trafilatura_extractor.py
app/presentation/: api.py  view_helpers.py
app/presentation/static/: dashboard.css
app/presentation/templates/: 404.html  503.html  _macros.html  (+3 more)
docs/: ARCHITECTURE.md  DECISIONS.md  ENGINEERING_SPEC.md  PROMPTS.md  RELEASE_CHECKLIST.md  ROADMAP.md
migrations/: env.py
migrations/versions/: 3318676bf824_create_articles_and_learning_notes.py
prompts/: learning_note_v1_system.txt  learning_note_v1_user.txt
tests/: test_cli.py  test_cli_composition.py  test_privacy_regression.py
tests/application/: processing_fakes.py  test_dashboard.py  test_learning_notes.py  test_processing.py
tests/domain/: test_article.py  test_extraction.py  test_learning_note.py
tests/infrastructure/: anthropic_fakes.py  conftest.py  factories.py  openai_fakes.py  test_anthropic_generator.py  test_dashboard_end_to_end.py  test_logging.py  test_mappers.py  test_migrations.py  test_openai_generator.py  test_processing_end_to_end.py  test_prompt_loader.py  test_rss_source.py  test_sqlite_article_repository.py  test_sqlite_learning_note_repository.py  test_sqlite_repository_error_translation.py  test_trafilatura_extractor.py
tests/presentation/: test_dashboard_routes.py  test_health.py  test_view_helpers.py
(+17 files in other folders)
